--- a/DESCRIPTION
+++ b/DESCRIPTION
@@ -9,8 +9,10 @@ Encoding: UTF-8
 Roxygen: list(markdown = TRUE)
 RoxygenNote: 7.3.3
 Imports:
-    dplyr,
-    rlang
+    dplyr
 Depends: 
     R (>= 3.5)
 LazyData: true
+Suggests: 
+    testthat (>= 3.0.0)
+Config/testthat/edition: 3
