--- a/DESCRIPTION
+++ b/DESCRIPTION
@@ -16,3 +16,5 @@ LazyData: true
 Suggests: 
     testthat (>= 3.0.0)
 Config/testthat/edition: 3
+URL: https://github.com/skywalshUSF/StarWarsStats
+BugReports: https://github.com/skywalshUSF/StarWarsStats/issues
