--- a/NAMESPACE
+++ b/NAMESPACE
@@ -3,4 +3,6 @@
 export(char_by_sex)
 export(char_height_by_planet)
 export(chars_born_before)
+export(get_starwars_data_by_name)
+export(get_starwars_data_by_starship)
 import(dplyr)
