--- a/DESCRIPTION
+++ b/DESCRIPTION
@@ -14,7 +14,10 @@ Depends:
     R (>= 3.5)
 LazyData: true
 Suggests: 
+    knitr,
+    rmarkdown,
     testthat (>= 3.0.0)
 Config/testthat/edition: 3
 URL: https://github.com/skywalshUSF/StarWarsStats
 BugReports: https://github.com/skywalshUSF/StarWarsStats/issues
+VignetteBuilder: knitr
